--- a/index.html
+++ b/index.html
@@ -3,42 +3,74 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gravity Simulator</title>
+    <title>Interactive Gravity Simulator</title>
     <style>
-        canvas {
-            border: 1px solid black;
-        }
-        .controls {
-            margin-top: 10px;
-        }
+        body { display: flex; flex-direction: column; align-items: center; }
+        canvas { border: 1px solid black; }
+        #controls { margin: 10px; }
     </style>
 </head>
 <body>
-    <h1>Gravity Simulator</h1>
+    <h1>Interactive Gravity Simulator</h1>
     <canvas id="simulationCanvas" width="800" height="600"></canvas>
-    <div class="controls">
-        <button id="addPlanet">Add Planet</button>
-        <button id="editPlanet">Edit Planet</button>
-        <button id="displayForces">Display Forces</button>
+    <div id="controls">
+        <button onclick="addPlanet()">Add Planet</button>
+        <button onclick="startSimulation()">Start</button>
+        <button onclick="stopSimulation()">Stop</button>
+        <input type="number" id="gravityField" placeholder="Gravity" value="9.81" step="0.1">
     </div>
     <script>
-        // Gravity simulation logic
         const canvas = document.getElementById('simulationCanvas');
         const ctx = canvas.getContext('2d');
+        let planets = [];
+        let simulationRunning = false;
 
-        // Further implementation goes here
+        class Planet {
+            constructor(x, y, mass) {
+                this.x = x;
+                this.y = y;
+                this.mass = mass;
+                this.radius = Math.sqrt(mass) * 10;
+                this.color = 'blue';
+            }
 
-        document.getElementById('addPlanet').onclick = function() {
-            // Logic to add planet
-        };
+            draw() {
+                ctx.fillStyle = this.color;
+                ctx.beginPath();
+                ctx.arc(this.x, this.y, this.radius, 0, Math.PI * 2);
+                ctx.fill();
+            }
+        }
 
-        document.getElementById('editPlanet').onclick = function() {
-            // Logic to edit planet properties
-        };
+        function addPlanet() {
+            const mass = Math.random() * 100 + 10; // Random mass
+            const x = Math.random() * canvas.width;
+            const y = Math.random() * canvas.height;
+            const planet = new Planet(x, y, mass);
+            planets.push(planet);
+            render();
+        }
 
-        document.getElementById('displayForces').onclick = function() {
-            // Logic to display forces
-        };
+        function startSimulation() {
+            simulationRunning = true;
+            requestAnimationFrame(simulate);
+        }
+
+        function stopSimulation() {
+            simulationRunning = false;
+        }
+
+        function simulate() {
+            if (!simulationRunning) return;
+            ctx.clearRect(0, 0, canvas.width, canvas.height);
+            planets.forEach(planet => planet.draw());
+            requestAnimationFrame(simulate);
+        }
+
+        function render() {
+            ctx.clearRect(0, 0, canvas.width, canvas.height);
+            planets.forEach(planet => planet.draw());
+        }
     </script>
 </body>
 </html>
