--- a/index.html
+++ b/index.html
@@ -3,73 +3,75 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Interactive Gravity Simulator</title>
+    <title>Gravity Simulator</title>
     <style>
-        body { display: flex; flex-direction: column; align-items: center; }
-        canvas { border: 1px solid black; }
-        #controls { margin: 10px; }
+        body { font-family: Arial, sans-serif; }
+        #controls { margin-bottom: 20px; }
+        .control { margin: 5px 0; }
     </style>
 </head>
 <body>
-    <h1>Interactive Gravity Simulator</h1>
-    <canvas id="simulationCanvas" width="800" height="600"></canvas>
+    <h1>Gravity Simulator</h1>
     <div id="controls">
-        <button onclick="addPlanet()">Add Planet</button>
-        <button onclick="startSimulation()">Start</button>
-        <button onclick="stopSimulation()">Stop</button>
-        <input type="number" id="gravityField" placeholder="Gravity" value="9.81" step="0.1">
+        <div class="control">
+            <label for="mass">Mass (kg):</label>
+            <input type="number" id="mass" value="5.972e24">  <!-- Earth mass -->
+        </div>
+        <div class="control">
+            <label for="radius">Radius (m):</label>
+            <input type="number" id="radius" value="6371e3">  <!-- Earth radius -->
+        </div>
+        <div class="control">
+            <label for="velocity">Velocity (m/s):</label>
+            <input type="number" id="velocity" value="3000">  <!-- Initial velocity -->
+        </div>
+        <button id="start">Start Simulation</button>
     </div>
+    <canvas id="canvas" width="800" height="600" style="border:1px solid black;"></canvas>
     <script>
-        const canvas = document.getElementById('simulationCanvas');
+        const canvas = document.getElementById('canvas');
         const ctx = canvas.getContext('2d');
+        let gravity;
         let planets = [];
-        let simulationRunning = false;
-
-        class Planet {
-            constructor(x, y, mass) {
-                this.x = x;
-                this.y = y;
-                this.mass = mass;
-                this.radius = Math.sqrt(mass) * 10;
-                this.color = 'blue';
-            }
-
-            draw() {
-                ctx.fillStyle = this.color;
-                ctx.beginPath();
-                ctx.arc(this.x, this.y, this.radius, 0, Math.PI * 2);
-                ctx.fill();
-            }
-        }
-
-        function addPlanet() {
-            const mass = Math.random() * 100 + 10; // Random mass
-            const x = Math.random() * canvas.width;
-            const y = Math.random() * canvas.height;
-            const planet = new Planet(x, y, mass);
-            planets.push(planet);
-            render();
-        }
+        
+        document.getElementById('start').addEventListener('click', startSimulation);
 
         function startSimulation() {
-            simulationRunning = true;
-            requestAnimationFrame(simulate);
+            const mass = parseFloat(document.getElementById('mass').value);
+            const radius = parseFloat(document.getElementById('radius').value);
+            const velocity = parseFloat(document.getElementById('velocity').value);
+            setupPlanet(mass, radius, velocity);
+            requestAnimationFrame(update);
         }
 
-        function stopSimulation() {
-            simulationRunning = false;
+        function setupPlanet(mass, radius, velocity) {
+            planets.push({ mass, radius, velocity, position: { x: canvas.width / 2, y: canvas.height / 2 } });
+            gravity = (6.674 * Math.pow(10, -11) * mass) / Math.pow(radius, 2);
         }
 
-        function simulate() {
-            if (!simulationRunning) return;
+        function update() {
             ctx.clearRect(0, 0, canvas.width, canvas.height);
-            planets.forEach(planet => planet.draw());
-            requestAnimationFrame(simulate);
+            drawPlanets();
+            applyGravity();
+            requestAnimationFrame(update);
         }
 
-        function render() {
-            ctx.clearRect(0, 0, canvas.width, canvas.height);
-            planets.forEach(planet => planet.draw());
+        function drawPlanets() {
+            planets.forEach(planet => {
+                ctx.beginPath();
+                ctx.arc(planet.position.x, planet.position.y, planet.radius, 0, Math.PI * 2);
+                ctx.fillStyle = 'Blue';
+                ctx.fill();
+                ctx.stroke();
+            });
+        }
+
+        function applyGravity() {
+            planets.forEach(planet => {
+                // Simplified gravitational simulation logic
+                planet.position.x += planet.velocity * Math.cos(gravity);
+                planet.position.y += planet.velocity * Math.sin(gravity);
+            });
         }
     </script>
 </body>
