Create index.html for gravity simulator

--- a/index.html
+++ b/index.html
@@ -1,78 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gravity Simulator</title>
-    <style>
-        body { font-family: Arial, sans-serif; }
-        #controls { margin-bottom: 20px; }
-        .control { margin: 5px 0; }
-    </style>
-</head>
-<body>
-    <h1>Gravity Simulator</h1>
-    <div id="controls">
-        <div class="control">
-            <label for="mass">Mass (kg):</label>
-            <input type="number" id="mass" value="5.972e24">  <!-- Earth mass -->
-        </div>
-        <div class="control">
-            <label for="radius">Radius (m):</label>
-            <input type="number" id="radius" value="6371e3">  <!-- Earth radius -->
-        </div>
-        <div class="control">
-            <label for="velocity">Velocity (m/s):</label>
-            <input type="number" id="velocity" value="3000">  <!-- Initial velocity -->
-        </div>
-        <button id="start">Start Simulation</button>
-    </div>
-    <canvas id="canvas" width="800" height="600" style="border:1px solid black;"></canvas>
-    <script>
-        const canvas = document.getElementById('canvas');
-        const ctx = canvas.getContext('2d');
-        let gravity;
-        let planets = [];
-        
-        document.getElementById('start').addEventListener('click', startSimulation);
-
-        function startSimulation() {
-            const mass = parseFloat(document.getElementById('mass').value);
-            const radius = parseFloat(document.getElementById('radius').value);
-            const velocity = parseFloat(document.getElementById('velocity').value);
-            setupPlanet(mass, radius, velocity);
-            requestAnimationFrame(update);
-        }
-
-        function setupPlanet(mass, radius, velocity) {
-            planets.push({ mass, radius, velocity, position: { x: canvas.width / 2, y: canvas.height / 2 } });
-            gravity = (6.674 * Math.pow(10, -11) * mass) / Math.pow(radius, 2);
-        }
-
-        function update() {
-            ctx.clearRect(0, 0, canvas.width, canvas.height);
-            drawPlanets();
-            applyGravity();
-            requestAnimationFrame(update);
-        }
-
-        function drawPlanets() {
-            planets.forEach(planet => {
-                ctx.beginPath();
-                ctx.arc(planet.position.x, planet.position.y, planet.radius, 0, Math.PI * 2);
-                ctx.fillStyle = 'Blue';
-                ctx.fill();
-                ctx.stroke();
-            });
-        }
-
-        function applyGravity() {
-            planets.forEach(planet => {
-                // Simplified gravitational simulation logic
-                planet.position.x += planet.velocity * Math.cos(gravity);
-                planet.position.y += planet.velocity * Math.sin(gravity);
-            });
-        }
-    </script>
-</body>
-</html>
+<!DOCTYPE html>\n<html lang="en">\n<head>\n    <meta charset="UTF-8">\n    <meta name="viewport" content="width=device-width, initial-scale=1.0">\n    <title>Gravity Simulator</title>\n    <style>\n        body { font-family: Arial, sans-serif; margin: 0; display: flex; justify-content: center; align-items: center; height: 100vh; background: #000; color: #fff; }\n        canvas { border: 1px solid #fff; }\n    </style>\n</head>\n<body>\n    <h1>Gravity Simulator</h1>\n    <canvas id="canvas" width="800" height="600"></canvas>\n    <script>\n        const canvas = document.getElementById('canvas');\n        const ctx = canvas.getContext('2d');\n        const G = 6.67430e-11; // gravitational constant\n\n        class Planet {\n            constructor(x, y, mass, color) {\n                this.x = x;\n                this.y = y;\n                this.mass = mass;\n                this.color = color;\n                this.vx = 0;\n                this.vy = 0;\n            }\n\n            draw() {\n                ctx.fillStyle = this.color;\n                ctx.beginPath();\n                ctx.arc(this.x, this.y, Math.sqrt(this.mass) * 0.1, 0, Math.PI * 2);\n                ctx.fill();\n            }\n        }\n\n        let planets = [];\n        planets.push(new Planet(400, 300, 5e10, 'blue')); // Example planet\n\n        function update() {\n            ctx.clearRect(0, 0, canvas.width, canvas.height);\n            planets.forEach(planet => {\n                planet.draw();\n            });\n        }\n\n        function loop() {\n            update();\n            requestAnimationFrame(loop);\n        }\n\n        loop();\n    </script>\n</body>\n</html>\n
